name:           MapQuestApi
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         juergen

executable MapQuestApi
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   HTTP >=4000.2.8 && <4000.3,
                   bytestring >=0.10.0 && <0.11,
                   aeson >=0.7.0 && <0.8,
                   text >=0.11.3 && <0.12,
                   utf8-string >=0.3.8 && <0.4,
                   unordered-containers >=0.2.3 && <0.3
  ghc-options:     -Wall
  other-modules:   
                   Request,
                   Service.GeoCoder,
                   Service.Directions,
                   Utils.HTTPWrapper,
                   Shared.RequestTypes,
                   Shared.ResponseTypes,
                   Shared.GeocoderResponseType,
                   Shared.GeocoderRequestType,
                   Shared.DirectionsRequestType,
                   Shared.DirectionsResponseType,
                   Shared.Maneuver,
                   Shared.Leg

